[tool.poetry]
name = "subgrounds"
version = "0.1.1"
description = "A framework for querying, manipulating and visualizing data indexed on The Graph network."
authors = []
repository = "https://github.com/Protean-Labs/subgrounds"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
pandas = "^1.4.2"
# pipe = "^1.6.0"
pipe = "^2.0"
dash = { version = "^2.3.1", optional = true }

[tool.poetry.extras]
dash = ["dash"]

[tool.poetry.dev-dependencies]
mypy = "^0.950"
nose2 = "^0.11.0"
flake8 = "^4.0.1"
pylint = "^2.13.8"
ipykernel = "^6.13.0"
mudkip = "^0.5.3"
myst-nb = "0.13.2"


[tool.mudkip]
title = "subgrounds"
preset = "rtd"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
